# mcp-test-server

./: .env  DS.py  README.md  main.py  old_main.py  pyproject.toml
src/mcpserver/: __init__.py  __main__ copy.py  __main__.py  common.py  deployment.py  local_DB.py  local_Notes.py  prompt_server.py  resources.py  vector_store.py
